infrastructure/root-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: root-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /api/user/v1/
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - reza.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: reza.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes
              servicePort: http
